# adhd

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build-universal.sh  createsessiondialog.cpp  createsessiondialog.h  createsessiondialog.ui  endsessiondialog.cpp  endsessiondialog.h  endsessiondialog.ui  focusoverlay.cpp  focusoverlay.h  focusoverlay.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  namegenerator.cpp  namegenerator.h  run.sh  service.cpp  service.h  sessionitemdelegate.cpp  sessionitemdelegate.h  sessionslistmodel.cpp  sessionslistmodel.h
